# movieswiper-gateway

./: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/auth/: jwt.py
app/middleware/: logging.py
app/proxy/: client.py
app/routes/: health.py  proxy.py
tests/: conftest.py  test_auth.py  test_error_handler.py  test_health.py  test_proxy.py
