[tool.poetry]
name = "ms-gateway"
version = "0.1.0"
description = "API gateway for movie-swiper"
authors = ["Devon Kalar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.3"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic-settings = "^2.6.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
httpx = "^0.27.0"
tenacity = "^8.3.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25"
respx = "^0.21.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
